<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8F8"
    tools:context=".Profile.view.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backgroud_profile"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/id_img_profile_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_launcher_foreground"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:elevation="@dimen/cardview_default_elevation"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorPrimaryDark"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingRight="40dp"
            android:paddingLeft="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/borde_profile"
                android:padding="16dp"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/user_profile_96"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:id="@+id/id_txv_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Jonathan A. Mideros N."/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/borde_profile"
                android:padding="16dp"
                android:layout_margin="8dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/email_profile_96"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:id="@+id/id_txv_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="jamideros@hotmail.com"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/str_profile_option_uno"
                            android:layout_weight="1"/>
                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/str_profile_option_dos"
                            android:layout_weight="1"/>
                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/str_profile_option_tres"
                            android:layout_weight="1"/>
                        <Switch
                            android:id="@+id/id_swi_profile_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>